# linkur

./: Cargo.toml  client.sh  server.sh
src/: client.rs  server.rs
